add hikari setting

--- a/registration-service/src/main/resources/application.yml
+++ b/registration-service/src/main/resources/application.yml
@@ -6,8 +6,13 @@ spring:
     url: jdbc:postgresql://localhost:5432/postgres?currentSchema=public
     username: postgres
     password: postgres
+
     hikari:
       maximum-pool-size: 5
+      idleTimeout: 600000
+      minimumIdle: 3
+      data-source-properties:
+        v$session.program: ${spring.application.name}
 
   flyway:
     schemas: public
