--- a/payment-service/src/main/resources/application.yml
+++ b/payment-service/src/main/resources/application.yml
@@ -3,10 +3,19 @@ server:
 
 spring:
   datasource:
+    hikari:
+      maximum-pool-size: 5
+      maxLifetime: 300000
+      idleTimeout: 300000
+      minimumIdle: 5
+      data-source-properties:
+        v$session:
+          program: registration-service
     driverClassName: org.postgresql.Driver
     url: jdbc:postgresql://database-psql:5432/postgres?currentSchema=payment_service
     username: psqluser
     password: PoSPa$$woRd
+    max-active: 5
 
 
   flyway:
