--- a/information-service/src/main/resources/application.yml
+++ b/information-service/src/main/resources/application.yml
@@ -4,18 +4,24 @@ server:
 spring:
   datasource:
     driverClassName: org.postgresql.Driver
-    url: jdbc:postgresql://localhost:5432/aston?currentSchema=information_service
-    username: postgres
-    password: postgres
+    url: jdbc:postgresql://database-psql:5432/postgres?currentSchema=payment_service
+    username: psqluser
+    password: PoSPa$$woRd
+    hikari:
+      hikari:
+        maximum-pool-size: 5
+        maxLifetime: 300000
+        minimumIdle: 5
   jpa:
     hibernate:
       ddl-auto: validate
 
-
   flyway:
-    schemas: information_service
-    user: postgres
-    password: postgres
+    schemas: payment_service
+    user: psqluser
+    password: PoSPa$$woRd
+
+
 
 logging:
   level:
