prepare to merge

--- a/information-service/build.gradle
+++ b/information-service/build.gradle
@@ -21,20 +21,26 @@ repositories {
 dependencies {
     implementation 'com.dropbox.core:dropbox-core-sdk:5.2.0'
 
-    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+
     implementation 'org.springframework.boot:spring-boot-starter-web'
-    implementation 'org.flywaydb:flyway-core'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
+    implementation 'org.springframework.kafka:spring-kafka'
     compileOnly 'org.projectlombok:lombok'
-    runtimeOnly 'org.postgresql:postgresql'
     annotationProcessor 'org.projectlombok:lombok'
-    implementation group: 'org.mapstruct', name: 'mapstruct', version: '1.4.2.Final'
-    annotationProcessor group: 'org.mapstruct', name: 'mapstruct-processor', version: '1.4.2.Final'
-    implementation group: 'io.swagger.core.v3', name: 'swagger-core', version: '2.2.0'
-    implementation group: 'org.springdoc', name: 'springdoc-openapi-ui', version: '1.6.8'
+    implementation 'org.flywaydb:flyway-core'
+    implementation "org.mapstruct:mapstruct:$mapStructVersion"
+    annotationProcessor "org.mapstruct:mapstruct-processor:$mapStructVersion"
+    runtimeOnly 'org.postgresql:postgresql'
+    developmentOnly 'org.springframework.boot:spring-boot-devtools'
+    implementation "com.github.javafaker:javafaker:$javafakerVersion"
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.testcontainers:junit-jupiter'
+    testImplementation 'org.testcontainers:kafka'
     testImplementation 'org.testcontainers:postgresql'
     testImplementation 'org.testcontainers:testcontainers'
+    implementation group: 'io.swagger.core.v3', name: 'swagger-core', version: '2.2.0'
+    implementation group: 'org.springdoc', name: 'springdoc-openapi-ui', version: '$springdocVersion'
 }
 
 tasks.named('test') {
