--- a/information-service/build.gradle
+++ b/information-service/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id 'org.springframework.boot' version '2.6.6'
+    id 'org.springframework.boot' version '2.6.7'
     id 'io.spring.dependency-management' version '1.0.11.RELEASE'
     id 'java'
 }
@@ -20,8 +20,6 @@ repositories {
 
 dependencies {
     implementation 'com.dropbox.core:dropbox-core-sdk:5.2.0'
-
-
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
@@ -29,18 +27,18 @@ dependencies {
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
     implementation 'org.flywaydb:flyway-core'
-    implementation "org.mapstruct:mapstruct:$mapStructVersion"
-    annotationProcessor "org.mapstruct:mapstruct-processor:$mapStructVersion"
+    implementation "org.mapstruct:mapstruct:1.4.2.Final"
+    annotationProcessor "org.mapstruct:mapstruct-processor:1.4.2.Final"
     runtimeOnly 'org.postgresql:postgresql'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
-    implementation "com.github.javafaker:javafaker:$javafakerVersion"
+    implementation "com.github.javafaker:javafaker:1.0.2"
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.testcontainers:junit-jupiter'
     testImplementation 'org.testcontainers:kafka'
     testImplementation 'org.testcontainers:postgresql'
     testImplementation 'org.testcontainers:testcontainers'
     implementation group: 'io.swagger.core.v3', name: 'swagger-core', version: '2.2.0'
-    implementation group: 'org.springdoc', name: 'springdoc-openapi-ui', version: '$springdocVersion'
+    implementation group: 'org.springdoc', name: 'springdoc-openapi-ui', version: '1.6.8'
 }
 
 tasks.named('test') {
