--- a/deposit-service/build.gradle
+++ b/deposit-service/build.gradle
@@ -22,7 +22,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
-	implementation "org.springdoc:springdoc-openapi-ui:$springdocVersion"
+	//implementation "org.springdoc:springdoc-openapi-ui:$springdocVersion"
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 	implementation 'org.flywaydb:flyway-core'
@@ -37,7 +37,7 @@ dependencies {
 	testImplementation 'org.testcontainers:postgresql'
 	testImplementation 'org.testcontainers:testcontainers'
 	implementation group: 'io.swagger.core.v3', name: 'swagger-core', version: '2.2.0'
-
+	implementation group: 'org.springdoc', name: 'springdoc-openapi-ui', version: '1.6.8'
 }
 
 dependencyManagement {
