--- a/deposit-service/src/main/resources/application.yml
+++ b/deposit-service/src/main/resources/application.yml
@@ -16,6 +16,12 @@ spring:
     schemas: deposit_service
     user: psqluser
     password: PoSPa$$woRd
+  kafka:
+    groupId: my_group
+    bootstrapAddress: 10.10.14.68:19092
+    topicName: test
+    maxRetryAttempts: 3
+
 logging:
   level:
     ROOT: INFO
