testing kafka in deposit, local

--- a/deposit-service/src/main/resources/application.yml
+++ b/deposit-service/src/main/resources/application.yml
@@ -1,21 +1,19 @@
 
 spring:
-  application:
-    name: deposit-service
   datasource:
-    driverClassName: org.postgresql.Driver
-    url: jdbc:postgresql://database-psql:5432/postgres?currentSchema=deposit_service
-    username: psqluser
-    password: PoSPa$$woRd
     hikari:
       maximum-pool-size: 5
       maxLifetime: 300000
       minimumIdle: 5
+    driverClassName: org.postgresql.Driver
+    url: jdbc:postgresql://localhost:5432/postgres?currentSchema=deposit_kafka
+    username: postgres
+    password: postgres
 
   flyway:
-    schemas: deposit_service
-    user: psqluser
-    password: PoSPa$$woRd
+    schemas: deposit_kafka
+    user: postgres
+    password: postgres
   kafka:
     groupId: my_group
     bootstrapAddress: 10.10.14.68:19092
