--- a/api-gateway/gateway/src/main/resources/application.properties
+++ b/api-gateway/gateway/src/main/resources/application.properties
@@ -7,6 +7,9 @@ spring.cloud.discovery.enabled=true
 spring.cloud.gateway.routes[0].id=registration-service
 spring.cloud.gateway.routes[0].uri=lb://registration-service
 spring.cloud.gateway.routes[0].predicates[0]=Path=/api/v1/**
+spring.cloud.gateway.routes[1].id=notification-service
+spring.cloud.gateway.routes[1].uri=lb://notification-service
+spring.cloud.gateway.routes[1].predicates[0]=Path=/api/v1/**
 
 eureka.instance.instance-id=${spring.application.name}-${random.uuid}
 
