--- a/notification-service/src/main/resources/application.properties
+++ b/notification-service/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+spring.application.name=notification-service
+
+eureka.instance.instance-id=${spring.application.name}-${random.uuid}
+eureka.instance.prefer-ip-address=true
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
+eureka.client.serviceUrl.defaultZone=http://10.10.14.31:30100/eureka/
 
