--- a/transfer-service/gradle.properties
+++ b/transfer-service/gradle.properties
@@ -4,3 +4,4 @@ mapStructVersion=1.4.2.Final
 springDependencyManagementVersion=1.0.11.RELEASE
 javafakerVersion=1.0.2
 testcontainersVersion=1.16.2
+springCloudVersion=2021.0.1
