--- a/api-gateway/gateway/src/main/resources/application.yml
+++ b/api-gateway/gateway/src/main/resources/application.yml
@@ -45,6 +45,10 @@ springdoc:
     urls:
       - name: transfer service
         url: /transfer-service/api-docs
+      - name: registration service
+        url: /registration-service/api-docs
+      - name: notification service
+        url: /notification-service/api-docs
     oauth:
       clientId: api-gateway
       clientSecret: 1Z05bi95GmFzBpyfDIiGRNeBZ8tHPWBM
