MRN-433  gateway Payment service + tune swaggers + fix Transfer Service

--- a/transfer-service/src/main/resources/application.yml
+++ b/transfer-service/src/main/resources/application.yml
@@ -52,3 +52,6 @@ eureka:
   instance:
     instance-id: ${spring.application.name}-${random.uuid}
     preferIpAddress: true
+  client:
+    serviceUrl:
+      defaultZone: http://10.10.14.31:30100/eureka
