--- a/api-gateway/gateway/src/main/resources/application.yml
+++ b/api-gateway/gateway/src/main/resources/application.yml
@@ -21,6 +21,10 @@ spring:
           uri: lb://registration-service
           predicates:
           - Path=/api/v1/**
+        - id: payment-service
+          uri: lb://payment-service
+          predicates:
+            - Path=/api/v1/**
   security:
     oauth2:
       resourceserver:
@@ -38,11 +42,14 @@ springdoc:
     path: '/api-docs'
   swagger-ui:
     path: '/swagger-ui'
+    operationsSorter: method
     urls:
-      - name: transfer service
+      - name: transfer-service
         url: /transfer-service/api-docs
       - name: registration-service
         url: /registration-service/api-docs
+      - name: payment-service
+        url: /payment-service/api-docs
     oauth:
       clientId: api-gateway
       clientSecret: 1Z05bi95GmFzBpyfDIiGRNeBZ8tHPWBM
