--- a/api-gateway/gateway/src/main/resources/application.yml
+++ b/api-gateway/gateway/src/main/resources/application.yml
@@ -24,7 +24,7 @@ spring:
         - id: deposit-service
           uri: lb://deposit-service
           predicates:
-          - Path=/api/v1/**
+          - Path=/api/v1/products/**, /api/v1/deposits/**
   security:
     oauth2:
       resourceserver:
