--- a/transfer-service/build.gradle
+++ b/transfer-service/build.gradle
@@ -30,6 +30,10 @@ dependencies {
     runtimeOnly 'org.postgresql:postgresql'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     implementation 'org.flywaydb:flyway-core'
+    implementation 'org.springframework.cloud:spring-cloud-starter-config:3.1.3'
+    implementation 'org.springframework.cloud:spring-cloud-starter-bootstrap:3.1.3'
+
+
 }
 
 dependencyManagement {
