--- a/transfer-service/src/main/resources/bootstrap.properties
+++ b/transfer-service/src/main/resources/bootstrap.properties
@@ -1,7 +1,3 @@
-# Read file on Config-Server:
-# app-about-company.properties or app-about-company.yml
-spring.application.name=app-about-company
-
-# This is the default:
+spring.application.name=transfer-service
 spring.cloud.config.uri=http://localhost:8888
 management.security.enabled=false
