add dependency to info-service and route on it to gateway

--- a/api-gateway/gateway/src/main/resources/application.yml
+++ b/api-gateway/gateway/src/main/resources/application.yml
@@ -29,6 +29,10 @@ spring:
           uri: lb://payment-service
           predicates:
             - Path=/api/v1/**
+        - id: information-service
+          uri: lb://information-service
+          predicates:
+            - Path=/api/v1/**
   security:
     oauth2:
       resourceserver:
