--- a/information-service/build.gradle
+++ b/information-service/build.gradle
@@ -1,9 +1,9 @@
+
 plugins {
-    id 'org.springframework.boot' version '2.6.7'
-    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
+    id 'org.springframework.boot' version "$springBootVersion"
+    id 'io.spring.dependency-management' version "$springDependencyManagementVersion"
     id 'java'
 }
-
 
 group = 'com.andersen.banking'
 version = '0.0.1-SNAPSHOT'
@@ -20,21 +20,25 @@ repositories {
 }
 
 dependencies {
-    implementation 'com.dropbox.core:dropbox-core-sdk:5.2.0'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
-    implementation 'org.springframework.kafka:spring-kafka'
+    implementation "org.springdoc:springdoc-openapi-ui:$springdocVersion"
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
-    implementation 'org.flywaydb:flyway-core'
-    implementation "org.mapstruct:mapstruct:1.4.2.Final"
-    annotationProcessor "org.mapstruct:mapstruct-processor:1.4.2.Final"
+    implementation "org.mapstruct:mapstruct:$mapStructVersion"
+    annotationProcessor "org.mapstruct:mapstruct-processor:$mapStructVersion"
     runtimeOnly 'org.postgresql:postgresql'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
-    implementation "com.github.javafaker:javafaker:1.0.2"
-    implementation group: 'io.swagger.core.v3', name: 'swagger-core', version: '2.2.0'
-    implementation group: 'org.springdoc', name: 'springdoc-openapi-ui', version: '1.6.8'
+    implementation 'org.flywaydb:flyway-core'
     implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
+    implementation 'com.dropbox.core:dropbox-core-sdk:5.2.0'
+    implementation "com.github.javafaker:javafaker:1.0.2"
+}
 
+dependencyManagement {
+    imports {
+        mavenBom "org.testcontainers:testcontainers-bom:$testcontainersVersion"
+        mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
+    }
 }
