--- a/api-gateway/gateway/build.gradle
+++ b/api-gateway/gateway/build.gradle
@@ -20,7 +20,6 @@ ext {
 dependencies {
 	implementation 'org.springframework.cloud:spring-cloud-starter-gateway'
 	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
-	implementation 'org.springdoc:springdoc-openapi-webflux-ui:1.6.9'
 
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
@@ -29,11 +28,12 @@ dependencies {
 
 	implementation 'org.springframework.data:spring-data-commons:2.7.2'
 
-
 	implementation 'org.springdoc:springdoc-openapi-ui:1.6.9'
 	implementation 'org.springdoc:springdoc-openapi-webflux-ui:1.6.9'
 	implementation 'org.springdoc:springdoc-openapi-security:1.6.9'
-	implementation 'org.springframework.cloud:spring-cloud-starter-feign:1.4.7.RELEASE'
+
+	implementation 'com.playtika.reactivefeign:feign-reactor-spring-cloud-starter:3.2.4'
+	implementation 'org.springframework.boot:spring-boot-starter-webflux:2.7.2'
 
 	compileOnly 'org.projectlombok:lombok'
 }
