--- a/deposit-service/src/main/resources/application.yml
+++ b/deposit-service/src/main/resources/application.yml
@@ -6,12 +6,12 @@ spring:
       maxLifetime: 300000
       minimumIdle: 5
     driverClassName: org.postgresql.Driver
-    url: jdbc:postgresql://localhost:5432/postgres?currentSchema=deposit_kafka
+    url: jdbc:postgresql://localhost:5432/postgres?currentSchema=deposit_kafka_test2
     username: postgres
     password: postgres
 
   flyway:
-    schemas: deposit_kafka
+    schemas: deposit_kafka_test2
     user: postgres
     password: postgres
   kafka:
