changed predicates in gateway yml

--- a/information-service/src/main/resources/application.yml
+++ b/information-service/src/main/resources/application.yml
@@ -17,7 +17,6 @@ spring:
   jpa:
     hibernate:
       ddl-auto: validate
-
   security:
     oauth2:
       resourceserver:
@@ -39,13 +38,13 @@ springdoc:
   api-docs:
     path: '/api-docs'
   swagger-ui:
+    groups-order: DESC
     path: '/swagger-ui'
     disable-swagger-default-url: true
     operationsSorter: method
     oauth:
       clientId: api-gateway
       clientSecret: 1Z05bi95GmFzBpyfDIiGRNeBZ8tHPWBM
-    groups-order: desc
   default-consumes-media-type: 'application/json'
   default-produces-media-type: 'application/json'
   model-converters:
