--- a/api-gateway/gateway/src/main/resources/application.yml
+++ b/api-gateway/gateway/src/main/resources/application.yml
@@ -28,13 +28,11 @@ spring:
         - id: registration-service
           uri: lb://registration-service
           predicates:
-            - Path=/api/v1/**
-            - Path=/api/v1/users/**, /api/v1/passport/**, /api/v1/addresses**, /api/v1/auth/**, /api/v1/notifications/**
+            - Path=/api/v1/users/**, /api/v1/passport/**, /api/v1/addresses/**, /api/v1/auth/**, /api/v1/notifications/**
         - id: information-service
           uri: lb://information-service
           predicates:
-            - Path=/api/v1/files/**
-            - Path=/api/v1/information/**
+            - Path=/api/v1/files/**, /api/v1/information/**
         - id: deposit-service
           uri: lb://deposit-service
           predicates:
