MRN-473 add role and send boolean field

--- a/registration-service/src/main/resources/application.properties
+++ b/registration-service/src/main/resources/application.properties
@@ -1,15 +1,14 @@
 keycloak.uri.tokens_obtain=http://10.10.14.31:30001/auth/realms/Meetingroom-New/protocol/openid-connect/token/
-keycloak.uri.users=http://10.10.14.31:30001/auth/admin/realms/Meetingroom-New/users/
-keycloak.uri.users.add=http://10.10.14.31:30001/auth/admin/realms/Meetingroom-New/users
-keycloak.uri.roles.add_to_user=http://10.10.14.31:30001/auth/admin/realms/Meetingroom-New/users/
-keycloak.uri.roles.add_to_client=/role-mappings/clients/
+keycloak.uri.add=http://10.10.14.31:30001/auth/admin/realms/Meetingroom-New/users
+keycloak.uri.realm_users=http://10.10.14.31:30001/auth/admin/realms/Meetingroom-New/users/
+keycloak.uri.role_mapping=/role-mappings/clients/
 keycloak.uri.jwks=http://10.10.14.31:30001/auth/realms/Meetingroom-New/protocol/openid-connect/certs
 keycloak.uri.password_reset=/reset-password
 
-keycloak.client.id.gateway=28848ed9-d935-4f4c-97d2-01d2ab9d477c
-keycloak.client.name.gateway=api-gateway
-keycloak.client.id.gateway-user-management=67166f4a-7ade-44fe-8d23-57a8c6acc6e7
-keycloak.client.name.gateway-user-management=gateway-user-management
+keycloak.client.gateway.id=28848ed9-d935-4f4c-97d2-01d2ab9d477c
+keycloak.client.gateway.name=api-gateway
+keycloak.client.gateway_user_management.id=67166f4a-7ade-44fe-8d23-57a8c6acc6e7
+keycloak.client.gateway_user_management.name=gateway-user-management
 
 keycloak.role.unauthorized.id=2c2bb0cd-a1b2-4fcf-8ce7-17220c2bef37
 keycloak.role.unauthorized.name=UNAUTHORIZED
