MRN-416 Add an api to select a source card and a recipient card of funds.

--- a/payment-service/src/main/resources/application.yml
+++ b/payment-service/src/main/resources/application.yml
@@ -60,3 +60,7 @@ eureka:
   client:
     serviceUrl:
       defaultZone: http://10.10.14.31:30100/eureka
+
+keycloak:
+  uri:
+    jwks: http://10.10.14.31:30001/auth/realms/Meetingroom-New/protocol/openid-connect/certs
