--- a/payment-service/build.gradle
+++ b/payment-service/build.gradle
@@ -22,6 +22,11 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
+	implementation 'org.springframework.boot:spring-boot-starter-security'
+	implementation 'org.springframework.security:spring-security-oauth2-client:5.7.2'
+	implementation 'org.springframework.security:spring-security-oauth2-resource-server'
+	implementation 'org.springframework.security:spring-security-oauth2-jose'
+	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign:3.1.3'
 	implementation "org.springdoc:springdoc-openapi-ui:$springdocVersion"
 	implementation 'org.springframework.kafka:spring-kafka'
 	implementation 'org.projectlombok:lombok:1.18.20'
