--- a/deposit-service/src/main/resources/application.yml
+++ b/deposit-service/src/main/resources/application.yml
@@ -20,6 +20,14 @@ spring:
     topicTransferRequest: transfer_to_deposit_request
     topicTransferResponse: deposit_to_transfer_response
     maxRetryAttempts: 3
+    consumer:
+      value-deserializer: org.springframework.kafka.support.serializer.ErrorHandlingDeserializer
+      properties:
+        spring:
+          deserializer:
+            value:
+              delegate:
+                class: org.springframework.kafka.support.serializer.JsonDeserializer
 
 logging:
   level:
