--- a/deposit-service/build.gradle
+++ b/deposit-service/build.gradle
@@ -23,6 +23,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation "org.springdoc:springdoc-openapi-ui:$springdocVersion"
+    testImplementation 'org.projectlombok:lombok:1.18.22'
+	testImplementation 'org.projectlombok:lombok:1.18.22'
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 	implementation 'org.flywaydb:flyway-core'
@@ -37,6 +39,9 @@ dependencies {
 	testImplementation 'org.testcontainers:postgresql'
 	testImplementation 'org.testcontainers:testcontainers'
 	implementation 'org.springframework.kafka:spring-kafka'
+
+	implementation 'org.springframework.kafka:spring-kafka-test'
+	testRuntimeOnly 'com.h2database:h2'
 }
 
 dependencyManagement {
