--- a/transfer-service/build.gradle
+++ b/transfer-service/build.gradle
@@ -34,9 +34,6 @@ dependencies {
     implementation 'org.flywaydb:flyway-core'
     implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
 
-    implementation 'org.springframework.cloud:spring-cloud-starter-config:3.1.3'
-    implementation 'org.springframework.cloud:spring-cloud-starter-bootstrap:3.1.3'
-
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
     testImplementation 'org.springframework.security:spring-security-test'
@@ -54,6 +51,7 @@ test {
 dependencyManagement {
     imports {
         mavenBom "org.testcontainers:testcontainers-bom:$testcontainersVersion"
+        mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
     }
 }
 
