MRN-420 add gradle settings

--- a/settings.gradle
+++ b/settings.gradle
@@ -5,6 +5,7 @@ include 'api-gateway:gateway'
 findProject(':api-gateway:gateway')?.name = 'gateway'
 include 'api-gateway:discovery-service'
 findProject(':api-gateway:discovery-service')?.name = 'discovery-service'
+include 'config-service'
 include 'payment-service'
 include 'deposit-service'
 include 'transfer-service'
