--- a/config-service/src/main/resources/application.properties
+++ b/config-service/src/main/resources/application.properties
@@ -1,2 +1,2 @@
 server.port=8888
-spring.cloud.config.server.git.uri=namegit
+spring.cloud.config.server.git.uri=https://git.andersenlab.com/Andersen/meetingroom-new/config-repo
