--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -31,6 +31,7 @@ build jars:
       - deposit-service/build/libs/*.jar
       - notification-service/build/libs/*.jar
       - information-service/build/libs/*.jar
+      - config-service/build/libs/*.jar
       # - api-gateway/**/build/libs/*.jar
       # - '**/build/libs/*.jar'
     expire_in: 1 day
@@ -40,6 +41,28 @@ build jars:
 build gateway:
   variables:
     PROJECT_NAME: api-gateway
+  stage: build docker
+  tags:
+    - docker-meetingroom
+  image:
+    name: gcr.io/kaniko-project/executor:debug
+    entrypoint: [""]
+  script:
+    - mkdir -p /kaniko/.docker
+    - echo "{\"auths\":{\"${REGISTRY_NAME}\":{\"auth\":\"$(printf "%s:%s" "${REGISTRY_USER_RW}" "${REGISTRY_RW_PASS}" | base64 | tr -d '\n')\"}}}" > /kaniko/.docker/config.json
+    - >-
+      /kaniko/executor
+      --context "${CI_PROJECT_DIR}"
+      --dockerfile "${CI_PROJECT_DIR}/ci-cd/${PROJECT_NAME}.Dockerfile"
+      --destination "${REGISTRY_NAME}/meetingroom-new-${PROJECT_NAME}:dev"
+  needs:
+    - build jars
+  rules:
+    - if: ($CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH)
+
+build config service:
+  variables:
+    PROJECT_NAME: config-service
   stage: build docker
   tags:
     - docker-meetingroom
@@ -229,6 +252,20 @@ deploy gateway:
   rules:
     - if: ($CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH)
 
+deploy config service:
+  variables:
+    DEPLOYMENT_NAME: config-service
+  stage: deploy
+  tags:
+    - shell-backend
+    - meetingroom-shell
+  script:
+    -  kubectl patch deployment ${DEPLOYMENT_NAME} -p "{\"spec\":{\"template\":{\"metadata\":{\"annotations\":{\"Commit\":\"${CI_COMMIT_SHORT_SHA}\"}}}}}" --record
+  needs:
+    - build config service
+  rules:
+    - if: ($CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH)
+
 deploy discovery service:
   variables:
     DEPLOYMENT_NAME: discovery-service
@@ -348,6 +385,7 @@ test:
         - "deposit-service/build/test-results/test/TEST-*.xml"
         - "notification-service/build/test-results/test/TEST-*.xml"
         - "information-service/build/test-results/test/TEST-*.xml"
+        - "config-service/build/test-results/test/TEST-*.xml"
   cache:
     key: "$CI_COMMIT_REF_NAME"
     policy: pull
