change tests to h2

--- a/registration-service/build.gradle
+++ b/registration-service/build.gradle
@@ -59,6 +59,8 @@ dependencies {
 
 	implementation 'com.google.firebase:firebase-admin:6.11.0'
 	implementation 'org.springframework.boot:spring-boot-starter-mail'
+
+	testRuntimeOnly 'com.h2database:h2'
 }
 
 dependencyManagement {
