--- a/registration-service/src/main/resources/application.yml
+++ b/registration-service/src/main/resources/application.yml
@@ -1,7 +1,6 @@
 server:
   port: 8181
 
-
 spring:
   application:
     name: registration-service
@@ -11,11 +10,11 @@ spring:
       maxLifetime: 300000
       minimumIdle: 5
     driverClassName: org.postgresql.Driver
-    url: jdbc:postgresql://localhost:5432/postgres?currentSchema=public
+    url: jdbc:postgresql://localhost:5432/postgres?currentSchema=public21
     username: postgres
     password: postgres
   flyway:
-    schemas: public
+    schemas: public21
     user: postgres
     password: postgres
   security:
@@ -63,3 +62,51 @@ eureka:
     fetch-registry: true
     serviceUrl:
       defaultZone: http://10.10.14.31:30100/eureka
+
+app:
+  firebase-configuration-file: meetingroom-notification-firebase-adminsdk-dyfbb-b4f0e42672.json
+notification:
+  mail:
+    host: smtp.gmail.com
+    port: 587
+    sender:
+      username: sergei.yurevich@gmail.com
+      password: ozfbcmmrgpxwlbdm
+    code:
+      length: 4
+      valid:
+        millis: 60000
+    blocking:
+      time:
+        millis: 2700000
+
+keycloak:
+  uri:
+    tokens_obtain: http://10.10.14.31:30001/auth/realms/Meetingroom-New/protocol/openid-connect/token/
+    add: http://10.10.14.31:30001/auth/admin/realms/Meetingroom-New/users
+    realm_users: http://10.10.14.31:30001/auth/admin/realms/Meetingroom-New/users/
+    role_mapping: /role-mappings/clients/
+    jwks: http://10.10.14.31:30001/auth/realms/Meetingroom-New/protocol/openid-connect/certs
+    password_reset: /reset-password
+  client:
+    gateway:
+      id: 28848ed9-d935-4f4c-97d2-01d2ab9d477c
+      name: api-gateway
+    gateway_user_management:
+      id: 67166f4a-7ade-44fe-8d23-57a8c6acc6e7
+      name: gateway-user-management
+  role:
+    unauthorized:
+      id: 2c2bb0cd-a1b2-4fcf-8ce7-17220c2bef37
+      name: UNAUTHORIZED
+    user:
+      id: cb018865-0e2d-4d93-bbd0-f1d04c76301d
+      name: USER
+    admin:
+      id: 5fca58c4-742a-4bce-8051-3bd0bb2c1a9c
+      name: ADMIN
+  admin:
+    username: user-management-admin
+    password: admin
+    grant_type: password
+    client_id: gateway-user-management
