--- a/deposit-service/src/main/resources/application.yml
+++ b/deposit-service/src/main/resources/application.yml
@@ -1,18 +1,20 @@
 spring:
+  application:
+    name: deposit-service
   datasource:
     hikari:
       maximum-pool-size: 5
       maxLifetime: 300000
       minimumIdle: 5
     driverClassName: org.postgresql.Driver
-    url: jdbc:postgresql://localhost:5432/postgres?currentSchema=deposit_kafka_test3
-    username: postgres
-    password: postgres
+    url: jdbc:postgresql://database-psql:5432/postgres?currentSchema=deposit_service
+    username: psqluser
+    password: PoSPa$$woRd
 
   flyway:
-    schemas: deposit_kafka_test3
-    user: postgres
-    password: postgres
+    schemas: deposit_service
+    user: psqluser
+    password: PoSPa$$woRd
   kafka:
     groupId: my_group
     bootstrapAddress: 10.10.14.68:19092
