--- a/deposit-service/src/main/resources/application.yml
+++ b/deposit-service/src/main/resources/application.yml
@@ -1,19 +1,18 @@
 spring:
-  application:
-    name: deposit-service
   datasource:
-    driverClassName: org.postgresql.Driver
-    url: jdbc:postgresql://database-psql:5432/postgres?currentSchema=deposit_service
-    username: psqluser
-    password: PoSPa$$woRd
     hikari:
       maximum-pool-size: 5
       maxLifetime: 300000
       minimumIdle: 5
+    driverClassName: org.postgresql.Driver
+    url: jdbc:postgresql://localhost:5432/postgres?currentSchema=deposit_filter2
+    username: postgres
+    password: postgres
+
   flyway:
-    schemas: deposit_service
-    user: psqluser
-    password: PoSPa$$woRd
+    schemas: deposit_filter2
+    user: postgres
+    password: postgres
   security:
     oauth2:
       resourceserver:
@@ -26,6 +25,7 @@ eureka:
     instance-id: ${spring.application.name}-${random.uuid}
     preferIpAddress: true
   client:
+    enabled: false
     serviceUrl:
       defaultZone: http://10.10.14.31:30100/eureka
 
