MRN-422 add caching

--- a/transfer-service/src/main/resources/application.yml
+++ b/transfer-service/src/main/resources/application.yml
@@ -20,6 +20,13 @@ spring:
     user: psqluser
     password: PoSPa$$woRd
 
+  redis:
+    host: 10.10.14.31
+    port: 30002
+    timeout: 2000ms
+    database: 1
+    password: JsuuII12
+
   security:
     oauth2:
       resourceserver:
