MRN-559 add refreshToken and logout endpoint

--- a/registration-service/src/main/resources/application.properties
+++ b/registration-service/src/main/resources/application.properties
@@ -3,6 +3,8 @@ keycloak.uri.add=http://10.10.14.31:30001/auth/admin/realms/Meetingroom-New/user
 keycloak.uri.realm_users=http://10.10.14.31:30001/auth/admin/realms/Meetingroom-New/users/
 keycloak.uri.role_mapping=/role-mappings/clients/
 keycloak.uri.jwks=http://10.10.14.31:30001/auth/realms/Meetingroom-New/protocol/openid-connect/certs
+keycloak.uri.token=http://10.10.14.31:30001/auth/realms/Meetingroom-New/protocol/openid-connect/token
+keycloak.uri.logout=http://10.10.14.31:30001/auth/realms/Meetingroom-New/protocol/openid-connect/logout
 keycloak.uri.password_reset=/reset-password
 
 keycloak.client.gateway.id=28848ed9-d935-4f4c-97d2-01d2ab9d477c
