--- a/registration-service/src/main/resources/application.yml
+++ b/registration-service/src/main/resources/application.yml
@@ -1,7 +1,6 @@
 server:
   port: 8181
 
-
 spring:
   application:
     name: registration-service
@@ -24,17 +23,6 @@ spring:
         jwt:
           issuer-uri: http://10.10.14.31:30001/auth/realms/Meetingroom-New
           jwk-set-uri: http://10.10.14.31:30001/auth/realms/Meetingroom-New/protocol/openid-connect/certs
-      client:
-        registration:
-          keycloak: # <--- It's your custom client. I am using keycloak
-            client-id: api-gateway
-            client-secret: 1Z05bi95GmFzBpyfDIiGRNeBZ8tHPWBM
-            authorization-grant-type: client_credentials
-            scope: openid # your scopes
-        provider:
-          keycloak: # <--- Here Registered my custom provider
-            authorization-uri: http://10.10.14.31:30001/auth/realms/Meetingroom-New/protocol/openid-connect/authorize
-            token-uri: http://10.10.14.31:30001/auth/realms/Meetingroom-New/protocol/openid-connect/token
 
 feign:
   compression:
@@ -87,3 +75,33 @@ eureka:
     fetch-registry: true
     serviceUrl:
       defaultZone: http://10.10.14.31:30100/eureka
+
+keycloak:
+  role:
+    unauthorized:
+      id: 2c2bb0cd-a1b2-4fcf-8ce7-17220c2bef37
+      name: UNAUTHORIZED
+    user:
+      id: cb018865-0e2d-4d93-bbd0-f1d04c76301d
+      name: USER
+    admin:
+      id: 5fca58c4-742a-4bce-8051-3bd0bb2c1a9c
+      name: ADMIN
+
+  client:
+    gateway:
+      id: 28848ed9-d935-4f4c-97d2-01d2ab9d477c
+      name: api-gateway
+    gateway_user_management:
+      id: 67166f4a-7ade-44fe-8d23-57a8c6acc6e7
+      name: gateway-user-management
+
+  admin:
+    username: user-management-admin
+    password: admin
+    grant_type: password
+    client_id: gateway-user-management
+
+
+  auth-server-url: http://10.10.14.31:30001
+  realm: Meetingroom-New
