MRN-543 change migration

--- a/registration-service/src/main/resources/application.yml
+++ b/registration-service/src/main/resources/application.yml
@@ -18,6 +18,14 @@ spring:
     schemas: public
     user: postgres
     password: postgres
+    placeholders:
+      username: psqluser
+      password: PoSPa$$woRd
+      host: 10.10.14.31
+      port: 30000
+      dbname: keycloak
+      schemaname: public
+      tablename: user_entity
   security:
     oauth2:
       resourceserver:
@@ -111,3 +119,4 @@ notification:
     blocking:
       time:
         millis: 2700000
+
